<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green" >
    
   	<TextView android:id="@+id/CreditsTitle" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" 
   	    android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="monospace"
   	    android:layout_marginTop="26dp" android:textStyle="bold" android:layout_height="wrap_content" 
   	    android:text="@string/credits_label" android:textSize="50sp" />
   	
   	<ScrollView android:layout_below="@id/CreditsTitle" android:layout_marginBottom="40dp"
   	    android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
   	    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
   	        <TextView android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="normal" 
   	         android:textStyle="normal" android:layout_height="wrap_content" android:text="@string/credita" android:textSize="15sp"/>
   	        <TextView android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="normal" 
   	         android:textStyle="normal" android:layout_height="wrap_content" android:text="@string/credit0" android:textSize="15sp"/>
   	    	<TextView android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="normal" 
   	         android:textStyle="normal" android:layout_height="wrap_content" android:text="@string/credit1" android:textSize="15sp"/>
   	    	<TextView android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="normal" 
   	         android:textStyle="normal" android:layout_height="wrap_content" android:text="@string/credit2" android:textSize="15sp"/>
   	    	<TextView android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="normal" 
   	         android:textStyle="normal" android:layout_height="wrap_content" android:text="@string/credit3" android:textSize="15sp"/>
   	    	<TextView android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="normal" 
   	         android:textStyle="normal" android:layout_height="wrap_content" android:text="@string/credit4" android:textSize="15sp"/>
   	    	<TextView android:layout_width="wrap_content" android:textColor="@android:color/black" android:typeface="normal" 
   	         android:textStyle="normal" android:layout_height="wrap_content" android:text="@string/credit5" android:textSize="15sp"/>
   	    </LinearLayout>
   	    
   	</ScrollView>
   	<Button android:id="@+id/Okbutton" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="20dp" 
        android:layout_marginTop="20dp" android:text="@string/back_label" android:onClick="returnToMenu" 
        android:typeface="monospace" android:background="@color/light_green" android:textStyle="bold" android:textSize="25sp" />
    

</RelativeLayout>

