<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green">

    <TextView android:id="@+id/GameTitle" android:layout_centerInParent="true" android:layout_width="wrap_content" 
        android:textColor="@android:color/black" android:typeface="monospace" android:textStyle="bold"
        android:layout_height="wrap_content" android:text="@string/app_name" android:textSize="90sp" />
    
     <!-- <TextView android:id="@+id/controlsInfo" android:layout_centerInParent="true" android:layout_width="wrap_content" 
        android:textColor="@android:color/black" android:typeface="normal" android:textStyle="normal"
        android:layout_height="wrap_content" android:text="@string/controls" android:textSize="20sp" android:visibility="invisible"/> -->    
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginBottom="45dp"
        android:text="@string/play_label" android:onClick="startGame" android:typeface="monospace" android:background="@color/light_green"
        android:textStyle="bold" android:textSize="25sp" />
    
    <ImageView android:visibility="invisible" android:id="@+id/infoLight" android:layout_width="36dp" android:layout_height="36dp"
        android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_marginBottom="52dp"
        android:layout_marginLeft="52dp" android:src="@drawable/info_light"></ImageView>
    
    <ImageButton android:id="@+id/infoButton" android:layout_width="100dp" android:layout_height="100dp"
        android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp" android:src="@drawable/info_icon" android:background="@android:color/transparent"
        android:onClick="information"></ImageButton>
    
    <ImageButton android:id="@+id/settingsButton" android:layout_width="100dp" android:layout_height="100dp"
        android:layout_alignParentBottom="true" android:layout_alignParentRight="true" android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp" android:src="@drawable/gear_icon" android:background="@android:color/transparent"
        android:onClick="settings"
        ></ImageButton>
    
    <!--   Menu items to be expanded with animatorsets -->
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:orientation="vertical" android:layout_above="@id/infoButton" android:layout_marginLeft="26dp"
        android:id="@+id/information_options" android:visibility="invisible">
        <Button android:layout_width="90dp" android:layout_height="wrap_content"
            android:text="@string/credits_label" android:onClick="showCredits"></Button>
        <Button android:layout_width="90dp" android:layout_height="wrap_content"
            android:text="@string/controls_label" android:onClick="showControls"></Button>
    </LinearLayout>
    
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="26dp"
        android:orientation="vertical" android:layout_above="@id/settingsButton" android:layout_alignParentRight="true"
        android:id="@+id/settings_options" android:visibility="invisible">
        <ImageView android:id="@+id/characterIcon" android:layout_width="wrap_content" android:layout_height="wrap_content"
        	android:src="@drawable/fbi_icon"  > </ImageView>
        <Button android:id="@+id/characterButton"  android:layout_width="90dp" android:layout_height="wrap_content"
           	android:text="@string/fbi_label" android:onClick="changeSkin"> </Button>
    </LinearLayout>
    
    

</RelativeLayout>
